[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/shade.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/umbrella_open.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/umbrella_closed.png" type="Texture" id=3]

[node name="Shade" type="Node2D"]

transform/scale = Vector2( -1, 1 )
script/script = ExtResource( 1 )
is_open = false
open_sun_mod = 0
closed_sun_mod = -3

[node name="Panel" type="Panel" parent="."]

visibility/opacity = 0.0
margin/left = -50.0
margin/top = -50.0
margin/right = 50.0
margin/bottom = 50.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2

[node name="OpenSprite" type="Sprite" parent="."]

visibility/visible = false
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="ClosedSprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[connection signal="input_event" from="Panel" to="." method="_on_Panel_input_event"]


